--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
     <application
         android:allowBackup="true"
         android:icon="@drawable/hit_timer_launcher"
-        android:label="@string/app_name"
+        android:label="@string/HIIT_Timer"
         android:theme="@style/AppTheme" >
 
         <!-- This meta-data tag is required to use Google Play Services. -->
@@ -19,7 +19,7 @@
 
         <activity
             android:name=".HIT_Timer"
-            android:label="@string/app_name" >
+            android:label="@string/HIIT_Timer" >
 
             <!--
             <intent-filter>
@@ -31,7 +31,7 @@
         </activity>
         <activity
             android:name=".SplashActivity"
-            android:label="@string/app_name"
+            android:label="@string/HIIT_Timer"
             android:theme="@style/Theme.AppCompat.NoActionBar" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
